changes in media player reset while changing camera

--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -559,7 +559,7 @@
                     vxgplayer("vxg_media_player1"+cameraID).dispose();
                     break;
                 }else{
-                    console.error("Player has not id", els[i]);
+                    //console.error("Player has not id while delete", els[i]);
                 }
             }
 
